signature readyf or 3 site

--- a/index_QE.html
+++ b/index_QE.html
@@ -12,11 +12,14 @@
         <table style="direction:ltr;border-collapse:collapse">
             <tbody>
                 <tr>
-                    <td style="vertical-align:top;padding:.01px 14px 0.01px 1px;width:150px;text-align:center">
+                    <td
+                        style="vertical-align:top;padding:.01px 14px 0.01px 1px;width:150px;text-align:center; position: relative;">
                         <img border="0"
                             src="https://d36urhup7zbd7q.cloudfront.net/u/mb0Yd1RWj9A/dec54108-7bc8-46c4-bb75-93edb4be1d67__313x244__.png"
                             height="auto" width="100%" alt="photo"
                             style="width:100%;vertical-align:middle;border-radius:0;height:auto;border:0;display:block">
+                        <img border="0" src="./carminho.png.jpeg" height="100px" width="100px" alt="photo" style="width:100px;height:100px;vertical-align:middle;object-fit: cover;border-radius:50%;border:0;display:block; position: absolute;    top: 0;
+    right: 14px;">
                     </td>
                     <td valign="top"
                         style="padding:.01px 14px 0.01px 14px;vertical-align:top;border-left:solid 6px #2F7268">
@@ -55,7 +58,7 @@
                                                     style="font-family:Arial;text-decoration:unset"
                                                     rel="nofollow noreferrer" target="_blank">
                                                     <span
-                                                        style="line-height:120%;font-family:Arial;font-size:11px;color:#212121;white-space:nowrap">is@casadosarcos.pt</span>
+                                                        style="line-height:120%;font-family:Arial;font-size:11px;color:#212121;white-space:nowrap">is@quintadaeira.pt</span>
                                                 </a>
                                             </span>
                                         </p>
@@ -68,11 +71,11 @@
                                                 height="auto" width="16px" alt="photo"
                                                 style="width:16px;vertical-align:middle;border-radius:0;height:auto;border:0;display:inline-block">
                                             <span style="white-space:nowrap">
-                                                <a href="https://catalinamagee.org"
+                                                <a href="https://quintadaeira.com/"
                                                     style="font-family:Arial;text-decoration:unset"
                                                     rel="nofollow noreferrer" target="_blank">
                                                     <span
-                                                        style="line-height:120%;font-family:Arial;font-size:11px;color:#212121;white-space:nowrap">catalinamagee.org</span>
+                                                        style="line-height:120%;font-family:Arial;font-size:11px;color:#212121;white-space:nowrap">https://quintadaeira.com</span>
                                                 </a>
                                             </span>
                                         </p>
@@ -90,10 +93,10 @@
                                 <tr>
                                     <td
                                         style="vertical-align:top;padding:.01px 14px 0.01px 1px;width:150px;text-align:center">
-                                        <img border="0"
-                                            src="https://d36urhup7zbd7q.cloudfront.net/u/mb0Yd1RWj9A/dec54108-7bc8-46c4-bb75-93edb4be1d67__313x244__"
-                                            height="auto" width="100%" alt="Logo will here"
+                                        <img border="0" src="./QE-logo.png" height="auto" width="100%"
+                                            alt="Logo will here"
                                             style="width:100%;vertical-align:middle;border-radius:0;height:auto;border:0;display:block">
+
                                     </td>
                                 </tr>
 
@@ -105,8 +108,8 @@
                                                     <td align="left"
                                                         style="padding-right:6px;text-align:center;padding-top:0">
                                                         <p style="margin:1px">
-                                                            <a href="https://facebook.com/" rel="nofollow noreferrer"
-                                                                target="_blank">
+                                                            <a href="https://www.facebook.com/quintaeira/"
+                                                                rel="nofollow noreferrer" target="_blank">
                                                                 <img width="24" height="24"
                                                                     src="https://cdn.gifo.wisestamp.com/s/fb/2F7268/48/circle/background.png"
                                                                     style="float:left;border:none;border-radius: 50%"
@@ -116,7 +119,8 @@
                                                     </td>
                                                     <td align="left"
                                                         style="padding-right:6px;text-align:center;padding-top:0">
-                                                        <p style="margin:1px"><a href="https://instagram.com/"
+                                                        <p style="margin:1px"><a
+                                                                href="https://www.instagram.com/quintadaeira_casamentos/"
                                                                 rel="nofollow noreferrer" target="_blank"><img
                                                                     width="24" height="24"
                                                                     src="https://cdn.gifo.wisestamp.com/s/inst/2F7268/48/circle/background.png"
